--- a/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -161,7 +161,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,HeterogeneousVolumes=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,NaniteMeshes=1,NaniteStreamingGeometry=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,HeterogeneousVolumes=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,NaniteMeshes=1,NaniteStreamingGeometry=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",StrataVisualizationMode="",GroomVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/GraingerBob/Animations
+ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints/Items/Notes
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -236,17 +236,22 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/Items/Flashlight/Flashlight_BP.Flashlight_BP
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController.BP_FirstPersonPlayerController
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/Items/Notes/Note.Note
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPerson/Blueprints/Items/Notes/Note.Note;
 RecentlyPlaced=/Game/GraingerBob/grainger_bob.grainger_bob;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
@@ -434,6 +439,54 @@ SkeletalMesh.Rendering=True
 PhysicsAssetGenerationSettings.Body Creation=True
 PhysicsAssetGenerationSettings.Constraint Creation=True
 AnimationRecordingParameters.Options=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+Note_C.TransformCommon=True
+Note_C.Rendering=True
+Note_C.Replication=True
+Note_C.Collision=True
+Note_C.HLOD=True
+Note_C.Physics=True
+Note_C.Networking=True
+Note_C.WorldPartition=True
+Note_C.Input=True
+Note_C.Actor=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Events=True
+Note_C.Default=True
+Note_C.Tick=True
+Note_C.Events=True
+K2Node_VariableSet.Events=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+BP_FirstPersonGameMode_C.Tick=True
+BP_FirstPersonGameMode_C.Classes=True
+BP_FirstPersonGameMode_C.Game=True
+BP_FirstPersonGameMode_C.GameMode=True
+BP_FirstPersonGameMode_C.Physics=True
+BP_FirstPersonGameMode_C.Events=True
+BP_FirstPersonPlayerController_C.PlayerController=True
+BP_FirstPersonPlayerController_C.Tick=True
+BP_FirstPersonPlayerController_C.Cheat Manager=True
+BP_FirstPersonPlayerController_C.MouseInterface=True
+BP_FirstPersonPlayerController_C.Game=True
+BP_FirstPersonPlayerController_C.Input=True
+BP_FirstPersonPlayerController_C.WorldPartition=True
+BP_FirstPersonPlayerController_C.Controller=True
+BP_FirstPersonPlayerController_C.Replication=True
+BP_FirstPersonPlayerController_C.Actor=True
+BP_FirstPersonPlayerController_C.HLOD=True
+BP_FirstPersonPlayerController_C.Physics=True
+BP_FirstPersonPlayerController_C.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1229,9 +1282,9 @@ ContentBrowserClassDataSource.TimeStamp=2024.01.19-05.59.34
 ContentBrowserClassDataSource.LastCompileMethod=External
 ContentBrowserFileDataSource.TimeStamp=2024.01.19-05.59.34
 ContentBrowserFileDataSource.LastCompileMethod=External
-Bridge.TimeStamp=2024.03.27-15.48.24
+Bridge.TimeStamp=2024.03.27-17.35.58
 Bridge.LastCompileMethod=External
-MegascansPlugin.TimeStamp=2024.03.27-15.48.25
+MegascansPlugin.TimeStamp=2024.03.27-17.35.58
 MegascansPlugin.LastCompileMethod=External
 AudioSynesthesiaEditor.TimeStamp=2024.01.19-06.03.53
 AudioSynesthesiaEditor.LastCompileMethod=External
@@ -1548,21 +1601,27 @@ PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=M:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=M:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/GraingerBob/Animations/Running_1_
-MRUItem1=/Game/GraingerBob/Animations/Idle
-MRUItem2=/Game/GraingerBob/grainger_bob_PhysicsAsset
-MRUItem3=/Game/GraingerBob/grainger_bob_Skeleton
-MRUItem4=/Game/GraingerBob/grainger_bob
-MRUItem5=/Game/FirstPerson/Blueprints/Items/Flashlight/Flashlight_BP
-MRUItem6=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem0=/Game/FirstPerson/Blueprints/Items/Notes/Note
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController
+MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem4=/Game/GraingerBob/Animations/Running_1_
+MRUItem5=/Game/GraingerBob/Animations/Idle
+MRUItem6=/Game/GraingerBob/grainger_bob_PhysicsAsset
+MRUItem7=/Game/GraingerBob/grainger_bob_Skeleton
+MRUItem8=/Game/GraingerBob/grainger_bob
+MRUItem9=/Game/FirstPerson/Blueprints/Items/Flashlight/Flashlight_BP
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
 /Game/FirstPerson/Blueprints/Items/Flashlight/Flashlight_BP.Flashlight_BP=0
+/Game/FirstPerson/Blueprints/Items/Notes/Note.Note=0
+/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode=1
+/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController.BP_FirstPersonPlayerController=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1675,6 +1734,23 @@ LODInfoUILayout="\"Object\" "
 PhysicsAssetGenerationSettings="\"Object\" "
 PhysicsAsset="\"Object\" "
 AnimationRecordingParameters="\"Object\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
+CharacterMovementComponent="\"Object\" "
+PawnMovementComponent="\"Object\" "
+NavMovementComponent="\"Object\" "
+MovementComponent="\"Object\" "
+K2Node_InputKey="\"Object\" "
+K2Node="\"Object\" "
+EdGraphNode="\"Object\" "
+EdGraphNode_Comment="\"Object\" "
+BP_FirstPersonPlayerController_C=
+PlayerController=
+Controller=
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1792,7 +1868,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
@@ -1807,4 +1883,13 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 [DetailCategoriesAdvanced]
 FbxImportUI.Miscellaneous=False
 FbxImportUI.Animation=True
+
+[DetailCustomWidgetExpansion]
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.SpawnLocations
+BP_FirstPersonPlayerController_C=PropertyWrapper.DefaultValueCategory.SpawnLocations
+BP_FirstPersonCharacter_C=
+K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.SpawnLocations
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
