--- a/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -193,7 +193,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/FirstPerson/Blueprints/Items/Battery
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -229,6 +229,8 @@ SequenceBrowser.HiddenColumns=HasParentAsset
 SequenceBrowser.HiddenColumns=AnimNotifyList
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
@@ -236,6 +238,7 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -249,10 +252,15 @@ RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Textures/T_Ground_Grass_D.T_Ground_Grass_D;
+RecentlyPlaced=/Game/GraingerOutsideArchFinal.GraingerOutsideArchFinal;
+RecentlyPlaced=/Game/GraingerOutsidePillar.GraingerOutsidePillar;
+RecentlyPlaced=/Game/GraingerOutsideArch.GraingerOutsideArch;
+RecentlyPlaced=/Game/4K_WoodFlooring_Vol02/Materials/M_Oak_Bskt_03_Mat_Inst.M_Oak_Bskt_03_Mat_Inst;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP.Drink_BP;
 RecentlyPlaced=/Game/FirstPerson/Blueprints/Items/Notes/Note.Note;
 RecentlyPlaced=/Game/GraingerBob/grainger_bob.grainger_bob;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -499,6 +507,34 @@ Drink_BP_C.WorldPartition=True
 Drink_BP_C.Events=True
 Drink_BP_C.TransformCommon=True
 Drink_BP_C.Networking=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Nanite=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.WorldPositionOffset=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpression.MaterialExpression=True
+CreateMeshObjectTypeProperties.OutputType=True
+ProceduralBoxToolProperties.Shape=True
+ProceduralBoxToolProperties.Positioning=True
+NewMeshMaterialProperties.Material=True
+PolygonOnMeshToolProperties.Operation=True
+PolygonOnMeshToolProperties.Shape=True
+PolygonOnMeshToolActionPropertySet.Actions=True
+MeshMergingSettingsObject.MergeSettings=True
+ProceduralCylinderToolProperties.Shape=True
+ProceduralCylinderToolProperties.Positioning=True
+ProceduralTorusToolProperties.Shape=True
+ProceduralTorusToolProperties.Positioning=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -514,7 +550,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=455.000 Y=-59.000
+ScreenPosition=X=317.000 Y=157.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1294,9 +1330,9 @@ ContentBrowserClassDataSource.TimeStamp=2024.03.21-08.14.22
 ContentBrowserClassDataSource.LastCompileMethod=External
 ContentBrowserFileDataSource.TimeStamp=2024.03.21-08.14.22
 ContentBrowserFileDataSource.LastCompileMethod=External
-Bridge.TimeStamp=2024.03.27-17.35.58
+Bridge.TimeStamp=2024.04.04-14.00.50
 Bridge.LastCompileMethod=External
-MegascansPlugin.TimeStamp=2024.03.27-17.35.58
+MegascansPlugin.TimeStamp=2024.04.04-14.00.51
 MegascansPlugin.LastCompileMethod=External
 AudioSynesthesiaEditor.TimeStamp=2024.03.21-08.16.28
 AudioSynesthesiaEditor.LastCompileMethod=External
@@ -1596,9 +1632,9 @@ SubobjectEditor.TimeStamp=2024.03.21-08.12.56
 SubobjectEditor.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2024.03.21-08.12.54
 HierarchicalLODOutliner.LastCompileMethod=External
-Voice.TimeStamp=2024.01.19-05.56.57
+Voice.TimeStamp=2024.03.21-08.12.57
 Voice.LastCompileMethod=External
-MovieSceneCapture.TimeStamp=2024.01.19-05.56.54
+MovieSceneCapture.TimeStamp=2024.03.21-08.12.55
 MovieSceneCapture.LastCompileMethod=External
 AnimationEditor.TimeStamp=2024.01.16-15.59.38
 AnimationEditor.LastCompileMethod=Unknown
@@ -1610,6 +1646,10 @@ SequencerWidgets.TimeStamp=2024.01.16-15.59.47
 SequencerWidgets.LastCompileMethod=Unknown
 PhysicsAssetEditor.TimeStamp=2024.01.16-15.59.45
 PhysicsAssetEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2024.03.21-08.12.54
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2024.03.21-08.12.54
+MaterialEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1617,17 +1657,18 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 RecentsFiles=M:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem2=/Game/FirstPerson/Blueprints/Items/Notes/Note
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController
-MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
-MRUItem5=/Game/GraingerBob/Animations/Running_1_
-MRUItem6=/Game/GraingerBob/Animations/Idle
-MRUItem7=/Game/GraingerBob/grainger_bob_PhysicsAsset
-MRUItem8=/Game/GraingerBob/grainger_bob_Skeleton
-MRUItem9=/Game/GraingerBob/grainger_bob
-MRUItem10=/Game/FirstPerson/Blueprints/Items/Flashlight/Flashlight_BP
+MRUItem0=/Game/StarterContent/GraingerBrick
+MRUItem1=/Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP
+MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem3=/Game/FirstPerson/Blueprints/Items/Notes/Note
+MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController
+MRUItem5=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
+MRUItem6=/Game/GraingerBob/Animations/Running_1_
+MRUItem7=/Game/GraingerBob/Animations/Idle
+MRUItem8=/Game/GraingerBob/grainger_bob_PhysicsAsset
+MRUItem9=/Game/GraingerBob/grainger_bob_Skeleton
+MRUItem10=/Game/GraingerBob/grainger_bob
+MRUItem11=/Game/FirstPerson/Blueprints/Items/Flashlight/Flashlight_BP
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
@@ -1636,6 +1677,7 @@ MRUItem10=/Game/FirstPerson/Blueprints/Items/Flashlight/Flashlight_BP
 /Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode=1
 /Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController.BP_FirstPersonPlayerController=0
 /Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP.Drink_BP=0
+/Game/StarterContent/GraingerBrick.GraingerBrick=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1765,6 +1807,21 @@ EdGraphNode_Comment="\"Object\" "
 BP_FirstPersonPlayerController_C=
 PlayerController=
 Controller=
+PreviewMaterial="\"Object\" "
+Material="\"Object\" "
+MaterialInterface="\"Object\" "
+MaterialExpressionMaterialFunctionCall="\"Object\" "
+MaterialExpression="\"Object\" "
+CreateMeshObjectTypeProperties="\"Object\" "
+InteractiveToolPropertySet="\"Object\" "
+ProceduralBoxToolProperties="\"Object\" "
+ProceduralShapeToolProperties="\"Object\" "
+NewMeshMaterialProperties="\"Object\" "
+PolygonOnMeshToolProperties="\"Object\" "
+StaticMeshComponent="\"Object\" "
+MeshMergingSettingsObject="\"Object\" "
+ProceduralCylinderToolProperties="\"Object\" "
+ProceduralTorusToolProperties="\"Object\" "
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1909,4 +1966,173 @@ Drink_BP_C=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=0
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=1
+bPlatformUsed[50]=0
+bPlatformUsed[51]=0
+bPlatformUsed[52]=0
+bPlatformUsed[53]=0
+bPlatformUsed[54]=0
+bPlatformUsed[55]=0
+bPlatformUsed[56]=0
+bPlatformUsed[57]=0
+bPlatformUsed[58]=0
+bPlatformUsed[59]=0
+bPlatformUsed[60]=0
+bPlatformUsed[61]=0
+bPlatformUsed[62]=0
+bPlatformUsed[63]=0
+bPlatformUsed[64]=0
+bPlatformUsed[65]=0
+bPlatformUsed[66]=0
+bPlatformUsed[67]=0
+bPlatformUsed[68]=0
+bPlatformUsed[69]=0
+bPlatformUsed[70]=0
+bPlatformUsed[71]=0
+bPlatformUsed[72]=0
+bPlatformUsed[73]=0
+bPlatformUsed[74]=0
+bPlatformUsed[75]=0
+bPlatformUsed[76]=0
+bPlatformUsed[77]=0
+bPlatformUsed[78]=0
+bPlatformUsed[79]=0
+bPlatformUsed[80]=0
+bPlatformUsed[81]=0
+bPlatformUsed[82]=0
+bPlatformUsed[83]=0
+bPlatformUsed[84]=0
+bPlatformUsed[85]=0
+bPlatformUsed[86]=0
+bPlatformUsed[87]=0
+bPlatformUsed[88]=0
+bPlatformUsed[89]=0
+bPlatformUsed[90]=0
+bPlatformUsed[91]=0
+bPlatformUsed[92]=0
+bPlatformUsed[93]=0
+bPlatformUsed[94]=0
+bPlatformUsed[95]=0
+bPlatformUsed[96]=0
+bPlatformUsed[97]=0
+bPlatformUsed[98]=0
+bPlatformUsed[99]=0
+bPlatformUsed[100]=0
+bPlatformUsed[101]=0
+bPlatformUsed[102]=0
+bPlatformUsed[103]=0
+bPlatformUsed[104]=0
+bPlatformUsed[105]=0
+bPlatformUsed[106]=0
+bPlatformUsed[107]=0
+bPlatformUsed[108]=0
+bPlatformUsed[109]=0
+bPlatformUsed[110]=0
+bPlatformUsed[111]=0
+bPlatformUsed[112]=0
+bPlatformUsed[113]=0
+bPlatformUsed[114]=0
+bPlatformUsed[115]=0
+bPlatformUsed[116]=0
+bPlatformUsed[117]=0
+bPlatformUsed[118]=0
+bPlatformUsed[119]=0
+bPlatformUsed[120]=0
+bPlatformUsed[121]=0
+bPlatformUsed[122]=0
+bPlatformUsed[123]=0
+bPlatformUsed[124]=0
+bPlatformUsed[125]=0
+bPlatformUsed[126]=0
+bPlatformUsed[127]=0
+bPlatformUsed[128]=0
+bPlatformUsed[129]=0
+bPlatformUsed[130]=0
+bPlatformUsed[131]=0
+bPlatformUsed[132]=0
+bPlatformUsed[133]=0
+bPlatformUsed[134]=0
+bPlatformUsed[135]=0
+bPlatformUsed[136]=0
+bPlatformUsed[137]=0
+bPlatformUsed[138]=0
+bPlatformUsed[139]=0
+bPlatformUsed[140]=0
+bPlatformUsed[141]=0
+bPlatformUsed[142]=0
+bPlatformUsed[143]=0
+bPlatformUsed[144]=0
+bPlatformUsed[145]=0
+bPlatformUsed[146]=0
+bPlatformUsed[147]=0
+bPlatformUsed[148]=0
+bPlatformUsed[149]=0
+bPlatformUsed[150]=0
+bPlatformUsed[151]=0
+bPlatformUsed[152]=0
+bPlatformUsed[153]=0
+bPlatformUsed[154]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
