Please God work

--- a/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -197,7 +197,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/CurvedWall
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -242,6 +242,7 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -259,9 +260,9 @@ RecentAssetEditors=BlueprintEditor
 
 [PlacementMode]
 RecentlyPlaced=/Game/GraingerOutside_Balcony.GraingerOutside_Balcony;
+RecentlyPlaced=/Game/GraingerOutside_2X4Window.GraingerOutside_2X4Window;
 RecentlyPlaced=/Game/GraingerOutside_Pillar.GraingerOutside_Pillar;
 RecentlyPlaced=/Game/GraingerOutside_6x4Window.GraingerOutside_6x4Window;
-RecentlyPlaced=/Game/GraingerOutside_2X4Window.GraingerOutside_2X4Window;
 RecentlyPlaced=/Game/GraingerOutside_2X2Window.GraingerOutside_2X2Window;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -583,6 +584,31 @@ K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
 ProceduralRectangleToolProperties.Shape=True
 ProceduralRectangleToolProperties.Positioning=True
+SplineWall_C.Tick=True
+SplineWall_C.Replication=True
+SplineWall_C.Rendering=True
+SplineWall_C.Collision=True
+SplineWall_C.Actor=True
+SplineWall_C.Input=True
+SplineWall_C.HLOD=True
+SplineWall_C.Physics=True
+SplineWall_C.WorldPartition=True
+SplineWall_C.Events=True
+SplineComponent.Variable=True
+SplineComponent.TransformCommon=True
+SplineComponent.Sockets=True
+SplineComponent.Selected Points=True
+SplineComponent.Spline=True
+SplineComponent.Editor=True
+SplineComponent.ComponentTick=True
+SplineComponent.HLOD=True
+SplineComponent.PathTracing=True
+SplineComponent.Navigation=True
+SplineComponent.Tags=True
+SplineComponent.ComponentReplication=True
+SplineComponent.Activation=True
+SplineComponent.Cooking=True
+SplineComponent.Events=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -598,7 +624,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=317.000 Y=157.000
+ScreenPosition=X=814.000 Y=215.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1716,20 +1742,21 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 RecentsFiles=M:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FirstPerson/Blueprints/UI/WBP_FlashlightTimer
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
-MRUItem2=/Game/FirstPerson/Blueprints/Items/Battery/Battery_BP
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem4=/Game/StarterContent/GraingerBrick
-MRUItem5=/Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP
-MRUItem6=/Game/FirstPerson/Blueprints/Items/Notes/Note
-MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController
-MRUItem8=/Game/GraingerBob/Animations/Running_1_
-MRUItem9=/Game/GraingerBob/Animations/Idle
-MRUItem10=/Game/GraingerBob/grainger_bob_PhysicsAsset
-MRUItem11=/Game/GraingerBob/grainger_bob_Skeleton
-MRUItem12=/Game/GraingerBob/grainger_bob
-MRUItem13=/Game/FirstPerson/Blueprints/Items/Flashlight/Flashlight_BP
+MRUItem0=/Game/CurvedWall/SplineWall
+MRUItem1=/Game/FirstPerson/Blueprints/UI/WBP_FlashlightTimer
+MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
+MRUItem3=/Game/FirstPerson/Blueprints/Items/Battery/Battery_BP
+MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem5=/Game/StarterContent/GraingerBrick
+MRUItem6=/Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP
+MRUItem7=/Game/FirstPerson/Blueprints/Items/Notes/Note
+MRUItem8=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController
+MRUItem9=/Game/GraingerBob/Animations/Running_1_
+MRUItem10=/Game/GraingerBob/Animations/Idle
+MRUItem11=/Game/GraingerBob/grainger_bob_PhysicsAsset
+MRUItem12=/Game/GraingerBob/grainger_bob_Skeleton
+MRUItem13=/Game/GraingerBob/grainger_bob
+MRUItem14=/Game/FirstPerson/Blueprints/Items/Flashlight/Flashlight_BP
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
@@ -1741,6 +1768,7 @@ MRUItem13=/Game/FirstPerson/Blueprints/Items/Flashlight/Flashlight_BP
 /Game/StarterContent/GraingerBrick.GraingerBrick=1
 /Game/FirstPerson/Blueprints/Items/Battery/Battery_BP.Battery_BP=0
 /Game/FirstPerson/Blueprints/UI/WBP_FlashlightTimer.WBP_FlashlightTimer=0
+/Game/CurvedWall/SplineWall.SplineWall=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1894,6 +1922,7 @@ TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
 WBP_FlashlightTimer_C="\"Object\" "
 UserWidget="\"Object\" "
 ProceduralRectangleToolProperties="\"Object\" "
+SplineComponent="\"Object\" "
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2041,6 +2070,7 @@ K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.SpawnLocations
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.SpawnLocations
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.SpawnLocations
 K2Node_InputKey=PropertyWrapper.DefaultValueCategory.SpawnLocations
+SplineWall_C=PropertyWrapper.DefaultValueCategory.SpawnLocations
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
