Adding Sound Effects

--- a/TheMidnightCram/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/TheMidnightCram/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -107,14 +107,18 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
 Note_C=PropertyWrapper.DefaultValueCategory.NewVar
 SceneComponent=
-Drink_BP_C=PropertyWrapper.DefaultValueCategory.NewVar
+Drink_BP_C=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.NewVar
 BP_FirstPersonPlayerController_C=
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
+BP_FirstPersonCharacter_C=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
+K2Node_Variable=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
+Object=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
+AudioComponent=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints/Items/Notes
+ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints/Items/BlueGuy
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -172,6 +176,8 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
@@ -181,12 +187,26 @@ CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem2=/Game/FirstPerson/Blueprints/Items/Notes/Note
+MRUItem0=/Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController
+MRUItem2=/Game/FirstPerson/Game_SFX/Page
+MRUItem3=/Game/FirstPerson/Game_SFX/Flashlight
+MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem5=/Game/FirstPerson/Game_SFX/Player_Walking
+MRUItem6=/Game/FirstPerson/Game_SFX/Player_Running
+MRUItem7=/Game/FirstPerson/Game_SFX/Bob_Walking
+MRUItem8=/Game/FirstPerson/Game_SFX/Drinking
+MRUItem9=/Game/FirstPerson/Blueprints/Items/Notes/Note
 
 [DetailCategories]
 BP_FirstPersonCharacter_C.TransformCommon=True
@@ -346,11 +366,51 @@ K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
+SoundWave.Format=True
+SoundWave.Sound=True
+SoundWave.Analysis=True
+SoundWave.Loading=True
+SoundWave.Subtitles=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
+K2Node_VariableSet.Events=True
+PropertyWrapper.Events=True
+AudioComponent.TransformCommon=True
+AudioComponent.Sound=True
+AudioComponent.Parameters=True
+AudioComponent.Attenuation=True
+AudioComponent.Subtitles=True
+AudioComponent.Randomization=True
+AudioComponent.Analysis=True
+AudioComponent.Concurrency=True
+AudioComponent.Attachment=True
+AudioComponent.Tags=True
+AudioComponent.ComponentReplication=True
+AudioComponent.Activation=True
+AudioComponent.Variable=True
+AudioComponent.Cooking=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+K2Node_VariableGet.Events=True
+Drink_BP_C.Default=True
+Drink_BP_C.Tick=True
+Drink_BP_C.Events=True
 
 [AssetEditorToolkitTabLocation]
-/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=1
+/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
 /Game/FirstPerson/Blueprints/Items/Notes/Note.Note=1
-/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController.BP_FirstPersonPlayerController=1
+/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController.BP_FirstPersonPlayerController=0
+/Game/FirstPerson/Game_SFX/Flashlight.Flashlight=1
+/Game/FirstPerson/Game_SFX/Page.Page=0
+/Game/FirstPerson/Game_SFX/Drinking.Drinking=1
+/Game/FirstPerson/Game_SFX/Bob_Walking.Bob_Walking=1
+/Game/FirstPerson/Game_SFX/Player_Running.Player_Running=1
+/Game/FirstPerson/Game_SFX/Player_Walking.Player_Walking=1
+/Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP.Drink_BP=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -487,7 +547,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=38.500
-WindowSize=X=1512.000 Y=893.000
+WindowSize=X=1512.000 Y=894.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
