Can now randomize page designs

--- a/TheMidnightCram/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/TheMidnightCram/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [DetailCustomWidgetExpansion]
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
-Note_C=PropertyWrapper.DefaultValueCategory.NewVar
+Note_C=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
 SceneComponent=
 Drink_BP_C=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.NewVar
@@ -118,7 +118,7 @@ Object=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueC
 AudioComponent=PropertyWrapper.DefaultValueCategory.NewVar,PropertyWrapper.DefaultValueCategory.SpawnLocations,PropertyWrapper.DefaultValueCategory.SpawnLocations2,K2Node_VariableGet.DefaultValueCategory.SpawnLocations2
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints/Items/BlueGuy
+ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints/Items/Notes
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -185,28 +185,32 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController
-MRUItem2=/Game/FirstPerson/Game_SFX/Page
-MRUItem3=/Game/FirstPerson/Game_SFX/Flashlight
-MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem5=/Game/FirstPerson/Game_SFX/Player_Walking
-MRUItem6=/Game/FirstPerson/Game_SFX/Player_Running
-MRUItem7=/Game/FirstPerson/Game_SFX/Bob_Walking
-MRUItem8=/Game/FirstPerson/Game_SFX/Drinking
-MRUItem9=/Game/FirstPerson/Blueprints/Items/Notes/Note
+MRUItem0=/Game/FirstPerson/Blueprints/Items/Notes/RippedPaper
+MRUItem1=/Game/FirstPerson/Blueprints/Items/Notes/RippedPaper2
+MRUItem2=/Game/FirstPerson/Blueprints/Items/Notes/Note
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController
+MRUItem4=/Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP
+MRUItem5=/Game/FirstPerson/Game_SFX/Page
+MRUItem6=/Game/FirstPerson/Game_SFX/Flashlight
+MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem8=/Game/FirstPerson/Game_SFX/Player_Walking
+MRUItem9=/Game/FirstPerson/Game_SFX/Player_Running
+MRUItem10=/Game/FirstPerson/Game_SFX/Bob_Walking
+MRUItem11=/Game/FirstPerson/Game_SFX/Drinking
 
 [DetailCategories]
 BP_FirstPersonCharacter_C.TransformCommon=True
@@ -399,6 +403,24 @@ K2Node_VariableGet.Events=True
 Drink_BP_C.Default=True
 Drink_BP_C.Tick=True
 Drink_BP_C.Events=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Nanite=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.WorldPositionOffset=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
@@ -411,6 +433,8 @@ Drink_BP_C.Events=True
 /Game/FirstPerson/Game_SFX/Player_Running.Player_Running=1
 /Game/FirstPerson/Game_SFX/Player_Walking.Player_Walking=1
 /Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP.Drink_BP=0
+/Game/FirstPerson/Blueprints/Items/Notes/RippedPaper2.RippedPaper2=1
+/Game/FirstPerson/Blueprints/Items/Notes/RippedPaper.RippedPaper=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1596,8 +1620,178 @@ Voice.TimeStamp=2024.01.28-01.50.45
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2024.01.28-01.50.12
 MovieSceneCapture.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2024.01.28-01.50.11
+MaterialEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
 RecentsFiles=/Applications/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=0
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=1
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=0
+bPlatformUsed[50]=0
+bPlatformUsed[51]=0
+bPlatformUsed[52]=0
+bPlatformUsed[53]=0
+bPlatformUsed[54]=0
+bPlatformUsed[55]=0
+bPlatformUsed[56]=0
+bPlatformUsed[57]=0
+bPlatformUsed[58]=0
+bPlatformUsed[59]=0
+bPlatformUsed[60]=0
+bPlatformUsed[61]=0
+bPlatformUsed[62]=0
+bPlatformUsed[63]=0
+bPlatformUsed[64]=0
+bPlatformUsed[65]=0
+bPlatformUsed[66]=0
+bPlatformUsed[67]=0
+bPlatformUsed[68]=0
+bPlatformUsed[69]=0
+bPlatformUsed[70]=0
+bPlatformUsed[71]=0
+bPlatformUsed[72]=0
+bPlatformUsed[73]=0
+bPlatformUsed[74]=0
+bPlatformUsed[75]=0
+bPlatformUsed[76]=0
+bPlatformUsed[77]=0
+bPlatformUsed[78]=0
+bPlatformUsed[79]=0
+bPlatformUsed[80]=0
+bPlatformUsed[81]=0
+bPlatformUsed[82]=0
+bPlatformUsed[83]=0
+bPlatformUsed[84]=0
+bPlatformUsed[85]=0
+bPlatformUsed[86]=0
+bPlatformUsed[87]=0
+bPlatformUsed[88]=0
+bPlatformUsed[89]=0
+bPlatformUsed[90]=0
+bPlatformUsed[91]=0
+bPlatformUsed[92]=0
+bPlatformUsed[93]=0
+bPlatformUsed[94]=0
+bPlatformUsed[95]=0
+bPlatformUsed[96]=0
+bPlatformUsed[97]=0
+bPlatformUsed[98]=0
+bPlatformUsed[99]=0
+bPlatformUsed[100]=0
+bPlatformUsed[101]=0
+bPlatformUsed[102]=0
+bPlatformUsed[103]=0
+bPlatformUsed[104]=0
+bPlatformUsed[105]=0
+bPlatformUsed[106]=0
+bPlatformUsed[107]=0
+bPlatformUsed[108]=0
+bPlatformUsed[109]=0
+bPlatformUsed[110]=0
+bPlatformUsed[111]=0
+bPlatformUsed[112]=0
+bPlatformUsed[113]=0
+bPlatformUsed[114]=0
+bPlatformUsed[115]=0
+bPlatformUsed[116]=0
+bPlatformUsed[117]=0
+bPlatformUsed[118]=0
+bPlatformUsed[119]=0
+bPlatformUsed[120]=0
+bPlatformUsed[121]=0
+bPlatformUsed[122]=0
+bPlatformUsed[123]=0
+bPlatformUsed[124]=0
+bPlatformUsed[125]=0
+bPlatformUsed[126]=0
+bPlatformUsed[127]=0
+bPlatformUsed[128]=0
+bPlatformUsed[129]=0
+bPlatformUsed[130]=0
+bPlatformUsed[131]=0
+bPlatformUsed[132]=0
+bPlatformUsed[133]=0
+bPlatformUsed[134]=0
+bPlatformUsed[135]=0
+bPlatformUsed[136]=0
+bPlatformUsed[137]=0
+bPlatformUsed[138]=0
+bPlatformUsed[139]=0
+bPlatformUsed[140]=0
+bPlatformUsed[141]=0
+bPlatformUsed[142]=0
+bPlatformUsed[143]=0
+bPlatformUsed[144]=0
+bPlatformUsed[145]=0
+bPlatformUsed[146]=0
+bPlatformUsed[147]=0
+bPlatformUsed[148]=0
+bPlatformUsed[149]=0
+bPlatformUsed[150]=0
+bPlatformUsed[151]=0
+bPlatformUsed[152]=0
+bPlatformUsed[153]=0
+bPlatformUsed[154]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
