--- a/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TheMidnightCram/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -197,7 +197,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/FirstPerson/Game_SFX
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -242,6 +242,10 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
@@ -267,11 +271,10 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/UI/PageCounter.PageCounter
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/UI/HotBar.HotBar
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -836,6 +839,64 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Rendering=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Rendering=True
+Widget.Navigation=True
+Widget.Localization=True
+PageCounter_C.Appearance=True
+PageCounter_C.Input=True
+PageCounter_C.Interaction=True
+PageCounter_C.Designer=True
+PageCounter_C.Performance=True
+PageCounter_C.Layout=True
+PageCounter_C.Behavior=True
+PageCounter_C.Render Transform=True
+PageCounter_C.Localization=True
+PageCounter_C.Accessibility=True
+PageCounter_C.Rendering=True
+PageCounter_C.Navigation=True
+BP_GraingerBob_C.Networking=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.Physics=True
+PlayerStart.Networking=True
+PlayerStart.WorldPartition=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+HotBar_C.Appearance=True
+HotBar_C.Input=True
+HotBar_C.Interaction=True
+HotBar_C.Designer=True
+HotBar_C.Performance=True
+HotBar_C.Layout=True
+HotBar_C.Behavior=True
+HotBar_C.Render Transform=True
+HotBar_C.Localization=True
+HotBar_C.Accessibility=True
+HotBar_C.Rendering=True
+HotBar_C.Navigation=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -851,7 +912,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=-8.000 Y=0.000
+ScreenPosition=X=637.000 Y=333.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1954,14 +2015,16 @@ SkeletonEditor.TimeStamp=2024.01.16-15.59.47
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2024.01.16-15.59.45
 PinnedCommandList.LastCompileMethod=Unknown
-SequencerWidgets.TimeStamp=2024.01.16-15.59.47
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2024.01.19-05.56.55
+SequencerWidgets.LastCompileMethod=External
 PhysicsAssetEditor.TimeStamp=2024.01.16-15.59.45
 PhysicsAssetEditor.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2024.03.21-08.12.54
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2024.03.21-08.12.54
 MaterialEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2024.01.19-05.56.56
+TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1969,36 +2032,36 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 RecentsFiles=M:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/StarterContent/Materials/M_Basic_Wall
-MRUItem1=/Game/GraingerOutside_Wall_North1
-MRUItem2=/Game/GraingerOutside_2X2Window
-MRUItem3=/Game/StarterContent/Materials/M_Glass
-MRUItem4=/Game/GraingerOutside_2X4Window
-MRUItem5=/Game/GraingerBob/AI/AI_GraingerBob
-MRUItem6=/Game/GraingerBob/AI/Tasks/BTTask_MoveRandomLocation
-MRUItem7=/Game/GraingerBob/AI/BT_GraingerBob
-MRUItem8=/Game/GraingerBob/AI/BP_GraingerBob
-MRUItem9=/Game/GraingerBob/Meshes/grainger_bob
-MRUItem10=/Game/GraingerBob/Textures/undershirt_texture
-MRUItem11=/Game/GraingerBob/Textures/shoes_texture
-MRUItem12=/Game/GraingerBob/Textures/shirt_texture
-MRUItem13=/Game/GraingerBob/Textures/pants_texture
-MRUItem14=/Game/GraingerBob/Textures/metal_skin_texture
-MRUItem15=/Game/GraingerBob/Textures/hair_texture
-MRUItem16=/Game/GraingerBob/Animations/Walking
-MRUItem17=/Game/GraingerBob/Animations/Walking_Backwards
-MRUItem18=/Game/GraingerBob/Animations/zombie_walk
-MRUItem19=/Game/GraingerBob/Animations/Running_2_
-MRUItem20=/Game/GraingerBob/Animations/Idle
-MRUItem21=/Game/CurvedWall/SplineWall
-MRUItem22=/Game/FirstPerson/Blueprints/UI/WBP_FlashlightTimer
-MRUItem23=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
-MRUItem24=/Game/FirstPerson/Blueprints/Items/Battery/Battery_BP
-MRUItem25=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem26=/Game/StarterContent/GraingerBrick
-MRUItem27=/Game/FirstPerson/Blueprints/Items/BlueGuy/Drink_BP
-MRUItem28=/Game/FirstPerson/Blueprints/Items/Notes/Note
-MRUItem29=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController
+MRUItem0=/Game/FirstPerson/Blueprints/UI/HotBar
+MRUItem1=/Game/UI_Images/BatteryIcon
+MRUItem2=/Game/FirstPerson/Blueprints/UI/PageCounter
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem4=/Game/StarterContent/Materials/M_Basic_Wall
+MRUItem5=/Game/GraingerOutside_Wall_North1
+MRUItem6=/Game/GraingerOutside_2X2Window
+MRUItem7=/Game/StarterContent/Materials/M_Glass
+MRUItem8=/Game/GraingerOutside_2X4Window
+MRUItem9=/Game/GraingerBob/AI/AI_GraingerBob
+MRUItem10=/Game/GraingerBob/AI/Tasks/BTTask_MoveRandomLocation
+MRUItem11=/Game/GraingerBob/AI/BT_GraingerBob
+MRUItem12=/Game/GraingerBob/AI/BP_GraingerBob
+MRUItem13=/Game/GraingerBob/Meshes/grainger_bob
+MRUItem14=/Game/GraingerBob/Textures/undershirt_texture
+MRUItem15=/Game/GraingerBob/Textures/shoes_texture
+MRUItem16=/Game/GraingerBob/Textures/shirt_texture
+MRUItem17=/Game/GraingerBob/Textures/pants_texture
+MRUItem18=/Game/GraingerBob/Textures/metal_skin_texture
+MRUItem19=/Game/GraingerBob/Textures/hair_texture
+MRUItem20=/Game/GraingerBob/Animations/Walking
+MRUItem21=/Game/GraingerBob/Animations/Walking_Backwards
+MRUItem22=/Game/GraingerBob/Animations/zombie_walk
+MRUItem23=/Game/GraingerBob/Animations/Running_2_
+MRUItem24=/Game/GraingerBob/Animations/Idle
+MRUItem25=/Game/CurvedWall/SplineWall
+MRUItem26=/Game/FirstPerson/Blueprints/UI/WBP_FlashlightTimer
+MRUItem27=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
+MRUItem28=/Game/FirstPerson/Blueprints/Items/Battery/Battery_BP
+MRUItem29=/Game/StarterContent/GraingerBrick
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
@@ -2020,6 +2083,9 @@ MRUItem29=/Game/FirstPerson/Blueprints/BP_FirstPersonPlayerController
 /Game/StarterContent/Materials/M_Glass.M_Glass=1
 /Game/GraingerOutside_2X2Window.GraingerOutside_2X2Window=1
 /Game/StarterContent/Materials/M_Basic_Wall.M_Basic_Wall=1
+/Game/UI_Images/BatteryIcon.BatteryIcon=1
+/Game/FirstPerson/Blueprints/UI/PageCounter.PageCounter=0
+/Game/FirstPerson/Blueprints/UI/HotBar.HotBar=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2219,6 +2285,12 @@ Actor="\"Object\" "
 StaticMesh="\"Object\" "
 PlaneCutToolProperties="\"Object\" "
 MaterialExpressionVectorParameter="\"Object\" "
+BP_FirstPersonCharacter_C="\"Object\" "
+Texture2D="\"Object\" "
+Texture="\"Object\" "
+Image="\"Object\" \"Object.Appearance.Brush\" "
+PageCounter_C="\"Object\" "
+HotBar_C="\"Object\" "
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2336,7 +2408,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
@@ -2352,6 +2424,7 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 FbxImportUI.Miscellaneous=False
 FbxImportUI.Animation=True
 StaticMeshActor.StaticMesh=True
+PropertyWrapper.Variable=False
 
 [DetailCustomWidgetExpansion]
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.SpawnLocations
@@ -2376,6 +2449,9 @@ HandleSightSense=PropertyWrapper.DefaultValueCategory.SpawnLocations
 AI_GraingerBob_C=PropertyWrapper.DefaultValueCategory.SpawnLocations
 SceneComponent=PropertyWrapper.DefaultValueCategory.SpawnLocations,BP_GraingerBob_C.Physics.ConstraintsGroup,BP_GraingerBob_C.Materials.MaterialList
 Actor=PropertyWrapper.DefaultValueCategory.SpawnLocations,BP_GraingerBob_C.Physics.ConstraintsGroup,BP_GraingerBob_C.Materials.MaterialList
+PlayerStart=PropertyWrapper.DefaultValueCategory.SpawnLocations,BP_GraingerBob_C.Physics.ConstraintsGroup,BP_GraingerBob_C.Materials.MaterialList
+PageCounter_C=
+HotBar_C=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -2646,4 +2722,20 @@ TreeViewWidth=0.300000
 
 [MRU]
 MRUItem0=/Game/FirstPerson/Maps/FirstPersonMap
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoSaveMaxBackups=10
+AutoSaveMethod=BackupAndRestore
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+RestoreOpenAssetTabsOnRestart=AlwaysPrompt
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
